--- a/src/sqlite/pyproject.toml
+++ b/src/sqlite/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.6.2"
 description = "A simple SQLite MCP server"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = ["mcp>=1.0.0"]
+dependencies = [
+    "mcp>=1.0.0",
+    "uvicorn>=0.32.1",
+]
 
 [build-system]
 requires = ["hatchling"]
